# cs617-two-feet-shared

./: .gitignore  README.md  a2c.py  a2c_gae.py  ppo old.py  ppo.py  pyproject.toml  random_agent.py  requirements.txt  sac.py
best_models/a2c_gae/: a2c_actor_step_3000000.pth  a2c_critic_step_3000000.pth  test
best_models/ppo_gae/: ppo_checkpoint.pt
best_models/sac/hardcore/: sac_actor_step_1000000.pth  sac_critic_step_1000000.pth
best_models/sac/normal/: sac_actor_step_1000000.pth  sac_critic_step_1000000.pth
common/: __init__.py  actor.py  base_agent.py  critic.py  replay_buffer.py  utils.py
results/ppo_BipedalWalker-v3_20250602_205753/: ppo_actor_step_50000.pth  ppo_critic_step_50000.pth
results/ppo_BipedalWalker-v3_20250602_205845/: ppo_actor_step_100000.pth  ppo_actor_step_150000.pth  ppo_actor_step_200000.pth  ppo_critic_step_100000.pth  ppo_critic_step_150000.pth  ppo_critic_step_200000.pth
tuning/: main_a2c.py  main_ppo.py  main_sac.py  main_sac_hardcore.py
tuning/config/: a2c_config.py  optimization_config.py  ppo_config.py  sac_config.py
tuning/core/: environment_manager.py  optimization_manager.py  parameter_sampler.py
tuning/evaluators/: standard_evaluator.py
tuning/interfaces/: agent_interface.py  evaluator_interface.py
tuning/trainers/: a2c_trainer.py  base_trainer.py  ppo_trainer.py  sac_trainer.py
